--- a/testes-e2e-cypress-main/package.json
+++ b/testes-e2e-cypress-main/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.1",
+    "eslint-plugin-cypress": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
