--- a/DDDProject/package.json
+++ b/DDDProject/package.json
@@ -8,13 +8,17 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch ./data/db.json --port 3333"
+    "server": "json-server --watch ./data/db.json --port 3333",
+    "tscheck": "tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.15.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
