--- a/react-native-orgs-cesta-3/package.json
+++ b/react-native-orgs-cesta-3/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@react-navigation/material-bottom-tabs": "^6.2.17",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "undefined": "@react-native-masked-view/masked-view]"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
