--- a/react-native-api/package.json
+++ b/react-native-api/package.json
@@ -6,13 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server --watch --host 192.168.15.105 db.json"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "json-server": "^0.17.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
