--- a/ignite-dt-money/package.json
+++ b/ignite-dt-money/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db": "json-server jsonserver/db.json -p 3333 -d 1200",
+    "db:watch": "json-server jsonserver/db.json -p 3333 -w -d 1200"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,6 +29,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "json-server": "^0.17.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
