--- a/ignite-dt-money/package.json
+++ b/ignite-dt-money/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "db": "json-server jsonserver/db.json -p 3333 -d 1200",
-    "db:watch": "json-server jsonserver/db.json -p 3333 -w -d 1200"
+    "db:watch": "json-server jsonserver/db.json -p 3333 -w -d 1200",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -21,7 +23,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "scheduler": "^0.23.0",
     "styled-components": "^6.1.1",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
