--- a/design-system/packages/react/package.json
+++ b/design-system/packages/react/package.json
@@ -6,17 +6,20 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@goia-ui/eslint-config": "*",
     "@goia-ui/tokens": "*",
-    "typescript": "^5.3.3",
     "@goia-ui/ts-config": "*",
-    "@goia-ui/eslint-config": "*"
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "react": "^18.2.0",
+    "typescript": "^5.3.3"
   }
 }
