--- a/design-system/package.json
+++ b/design-system/package.json
@@ -1,6 +1,26 @@
 {
-  "private": "true", 
-  "workspaces": [ 
-    "packages/*" 
-  ]
+  "private": "true",
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/react": "^7.6.14",
+    "@storybook/react-vite": "^7.6.14",
+    "@storybook/test": "^7.6.14",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.6.14",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^4.5.2"
+  },
+  "scripts": {
+    "dev:sb": "storybook dev -p 6006",
+    "build:sb": "storybook build"
+  }
 }
