--- a/design-system/package.json
+++ b/design-system/package.json
@@ -12,12 +12,19 @@
     "@storybook/react": "^7.6.14",
     "@storybook/react-vite": "^7.6.14",
     "@storybook/test": "^7.6.14",
-    "prop-types": "^15.8.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "polished": "^4.3.1",
+    "prop-types": "^15.8.1",    
+    "storybook": "^7.6.14",
+    "vite": "^4.5.2"
+  },
+  "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.14",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^4.5.2"
+    "@goia-ui/ts-config": "*",
+    "@goia-ui/eslint-config": "*",
+    "@goia-ui/tokens": "*",
+    "@goia-ui/react": "*"  
   },
   "scripts": {
     "dev:sb": "storybook dev -p 6006",
